# mattersim

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  MODEL_CARD.md  README.md  environment.yaml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml
.github/workflows/: build.yaml  codeql.yaml  gh-pages.yaml  python-publish.yaml  python-publish.yml
docs/: README.md  conf.py  index.rst
docs/examples/: batch_relaxation_example.rst  examples.rst  phonon_example.ipynb  phonon_example.rst  relax_example.rst
docs/user_guide/: finetune.rst  getting_started.rst  installation.rst
notebooks/: foundry-mattersim-phonon.ipynb
script/: finetune_mattersim.py  vasprun_to_xyz.py
src/mattersim/: __init__.py  __version__.py
src/mattersim/applications/: batch_relax.py  moldyn.py  phonon.py  relax.py
src/mattersim/cli/: mattersim_app.py
src/mattersim/cli/applications/: moldyn.py  phonon.py  relax.py  singlepoint.py
src/mattersim/datasets/: dataset.py
src/mattersim/datasets/utils/: build.py  convertor.py  regressor.py  setup.py  threebody_indices.pyx
src/mattersim/forcefield/: __init__.py  potential.py
src/mattersim/forcefield/m3gnet/: m3gnet.py  m3gnet_multi_head.py  scaling.py
src/mattersim/forcefield/m3gnet/modules/: __init__.py  angle_encoding.py  edge_encoding.py  layers.py  message_passing.py
src/mattersim/jit_compile_tools/: jit.py  jit_compile.py
src/mattersim/training/: finetune_mattersim.py
src/mattersim/utils/: atoms_utils.py  download_utils.py  logger_utils.py  mlflow_utils.py  phonon_utils.py  supercell_utils.py  vasprun_to_xyz.py
tests/applications/: test_batch_relax.py  test_phonon.py  test_relax.py
tests/data/: high_level_water.xyz  mp-149_Si2.cif  mp-2998_BaTiO3.cif  mp-66_C2.cif
