[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.32", "numpy<2"]
build-backend = "setuptools.build_meta"

[project]
name = "mattersim"
version = "1.0.0"
description = "MatterSim: A Deep Learning Atomistic Model Across Elements, Temperatures and Pressures."
authors = [
    {name = "Han Yang", email = "hanyang@microsoft.com"},
    {name = "Jielan Li", email = "jielanli@microsoft.com"},
    {name = "Hongxia Hao", email = "hongxiahao@microsoft.com"},
    {name = "Ziheng Lu", email = "zihenglu@microsoft.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ase>=3.23.0",
    "e3nn==0.5.0",
    "seekpath",
    "numpy<2",
    "pymatgen",
    "loguru",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "torch_runstats==0.2.0",
    "torch_geometric==2.5.3",
    "torchmetrics>=0.10.0",
    "torch-ema==0.3",
    "opt_einsum_fx",
    "azure-storage-blob",
    "azure-identity",
    "mp-api",
    "emmet-core<0.84",
    "pydantic==2.9.2",
    "deprecated"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-testmon",
    "pre-commit",
    "ipython",
    "ipykernel"
]


[project.urls]
"Homepage" = "https://github.com/microsoft/mattersim"
"Bug Tracker" = "https://github.com/microsoft/mattersim/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mattersim", "mattersim.*"]
